load("//build/bazelutil/unused_checker:unused.bzl", "get_x_data")
load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "tenantcostmodel",
    srcs = [
        "model.go",
        "settings.go",
    ],
    importpath = "github.com/cockroachdb/cockroach/pkg/multitenant/tenantcostmodel",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/roachpb",
        "//pkg/settings",
        "//pkg/util/log",
        "@com_github_cockroachdb_errors//:errors",
    ],
)

get_x_data(name = "get_x_data")

go_test(
    name = "tenantcostmodel_test",
    srcs = ["settings_test.go"],
    embed = [":tenantcostmodel"],
    deps = ["@com_github_stretchr_testify//require"],
)
